more changes, capitalizing the first letter for hashtag #Diagonalmar. home: CTA text changed. Lookbook: reducing to 4 categories, margi-bottom added. Product: CTA text onboarded.

--- a/css/1101604483ed284179caf4a075d5e2a9.css
+++ b/css/1101604483ed284179caf4a075d5e2a9.css
@@ -30404,6 +30404,10 @@ li.ui-timepicker-selected .ui-timepicker-duration,
 
 /* Photoslurp styles */
 
+.widget-container {
+    background-image:  
+}
+
 .widget_heading {
     font-size: 3.66667em;
     font-weight: 400;
